After code review with Aviv